# client

./: .gitignore  Cargo.toml  Rocket.toml  file.txt  install.sh  readme.md
.github/: ISSUE_TEMPLATE.md  codecov.yml
.github/workflows/: prerelease.yml  release.yml  tarpaulin.yml  test.yml
agent/: Cargo.toml
agent/src/: db.rs  error.rs  main.rs
cli/: Cargo.toml  build.rs
cli/src/: error.rs  main.rs  share.rs
config/: Cargo.toml  db.sql  default_config.toml
config/src/: error.rs  lib.rs
database/: Cargo.toml
database/migrations/2021-11-18-054920_create_shares/: up.sql
database/src/: lib.rs  models.rs  schema.rs
riptide_agent/: Cargo.toml  riptide.service
riptide_agent/src/: error.rs  main.rs
riptide_cli/: Cargo.toml  build.rs
riptide_cli/src/: cli.rs  main.rs
riptide_config/: Cargo.toml  default_config.toml
riptide_config/src/: error.rs  lib.rs
riptide_database/: Cargo.toml
riptide_database/src/: lib.rs  models.rs  schema.rs
src/: common.rs  database.rs  db.rs  error.rs  errors.rs  hash.rs  main.rs  server_io.rs  structs.rs
templates/: download.html.hbs
www/static/: download.html
