[workspace]
members = [
    "riptide_database/",
    "riptide_config/",
    "riptide_agent/",
    "riptide_cli/",
]

[profile.production]
inherits = "release"
lto = true
opt-level = "s"
codegen-units = 1
# strip = true #lose all debug/stack trace information from releases - sorta recommended? No point having human-panic with this enabled.
# panic="abort" #lose all panic information from releases - seg fault - not recommended
