[package]
name = "agent"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws-com-framework = { path="../../ws-com-framework" }
database = { path = "../database" }
config = { path = "../config", default-features = false, features = ["async"] }

log = "0.4.16"
pretty_env_logger = "0.4.0"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["codec"] }
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }

reqwest = { version = "0.11.4", default-features = false, features = ["stream"] }

futures-util = "0.3.17"
futures = "0.3.17"

[dev-dependencies]
warp="0.3.1"