[package]
name = "agent"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws-com-framework = { git = "https://github.com/file-share-platform/ws-com-framework", rev="1b7b6e1562f40f4591a341170f5ade262c2dca60" }
database = { path = "../database" }
config = { path = "../config", default-features = false, features = ["async"] }

log = "0.4.17"
pretty_env_logger = "0.4.0"

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }

reqwest = { version = "0.11.11", default-features = false, features = ["stream", "native-tls"] }

futures-util = "0.3.24"
futures = "0.3.24"

[dev-dependencies]
warp="0.3.2"
