[package]
name = "cli"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"



[dependencies]
ws-com-framework = { git = "https://github.com/file-share-platform/ws-com-framework", rev="d7dcd58cd2e445e2a344a1bbbdd089a5b9ee585f" }
config = { path = "../config", features = ["sync"] }
database = { path = "../database" }

rand = "0.8.5"
lazy_static = "1.4.0"
chrono = { version = "0.4" }

# Interface Crates
clap = { version = "3.2.19", features = ["derive"]}
clap_complete = "3.2.4"
clap_mangen = "0.1.11"
cli-clipboard = "0.2.1"
whoami = "1.2.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
human-panic = "1.0.3"

[build-dependencies]
clap = { version = "3.1.8", features = ["derive"]}
clap_mangen = "0.1.2"
