[package]
name = "config"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking", "native-tls"] }

dirs = "4.0.0"
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
bincode = "1.3.3"
getset = "0.1.2"

### Optional Crates ###
tokio = { version = "1", optional = true, default-features = false, features = ["rt"] }

[features]
default = ["sync"]
sync = []
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
warp="0.3.1"
