[package]
name = "database"
version = "0.1.0"
authors = ["Josiah Bull <josiah.bull7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws-com-framework = { git = "https://github.com/file-share-platform/ws-com-framework", rev="d7dcd58cd2e445e2a344a1bbbdd089a5b9ee585f" }
config = { path = "../config" }

diesel = { version = "2.0.0", default-features = false, features = ["chrono", "sqlite"] }
diesel_migrations = "2.0.0"
