[package]
name = "riptide_config"
version = "1.0.0"
authors = ["Josiah Bull", "Lachlan Davidson"]
edition = "2021"
description = "A configuration library for the Riptide file transfer system"
repository = "https://github.com/riptide-org/client"
license = "MIT"
keywords = ["config", "configuration", "riptide"]

[dependencies]
ureq = { version = "2.5.0", default-features = false, features = ["json", "tls"]}

log = "0.4.17"

dirs = "4.0.0"
toml = "0.5.9"
serde = "1.0.144"
serde_derive = "1.0.144"
getset = "0.1.2"
bincode = "1.3.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
warp="0.3.1"

[lib]
name = "riptide_config"
path = "src/lib.rs"
